# PoT_Experiments

./: .gitignore  .submission_exclude  AGENTS.md  API_VERIFICATION_SYSTEM.md  BASELINE_ESTIMATE_BREAKDOWN.md  CIRCULAR_DEPENDENCY_FIXES.md  CLAUDE.md  CLOUDLESS_SUMMARY.md  COLAB_BULLETPROOF.py  COLAB_FULL_PIPELINE.py  COLAB_REAL_TESTS.py  COLAB_SHOW_OUTPUT.py  COLAB_WITH_FULL_REPORTING.py  CONTEXT_WINDOW_THRASHING_FIXES.md  CORRECTED_VALIDATION_EVIDENCE.md  CORRECTED_VALIDATION_REPORT.md  DEBUG_REPORT.md  DETAILED_ISSUES.csv  Dockerfile  Dockerfile.attacks  EVIDENCE_DASHBOARD.md  EXPERIMENTAL_VALIDATION_REPORT.md  EXPERIMENTS.md  FAIR_COMPARISON_ANALYSIS.md  GGUF_72B_TESTING_RESULTS.md  GPU_COMPATIBILITY.md  LARGE_MODEL_TESTING.md  LORA_CIRCUIT_IMPLEMENTATION.md  METRICS_SUMMARY.md  MODEL_SELECTION_SUMMARY.md  Makefile  POT_PAPER_COMPLETE.md  POT_PAPER_ENHANCED.md  PROJECT_STRUCTURE.md  PoT Paper.md  README.md  README_DEV.md  RUN_IN_COLAB.md  RUN_THIS_IN_COLAB.txt  STUB_IMPLEMENTATION_LIST.md  (+198 more)
api_results/: api_verification.jsonl  mock_mock-model_responses_20250816_083734.json  summary_20250816_083758.json  verification_results_20250816_083758.json
attack_results_fixed/: attack_results_20250816_001126.json
attack_simulation_results/: attack_report_20250815_233923.txt  attack_results_20250815_233923.json
audit_logs/: audit_20250816_175305_adversarial_test.json  audit_20250816_175305_genuine_test.json  audit_20250816_175305_reuse_test.json
benchmarks/: lora_vs_full.py  semantic_performance.py  topography_benchmarks.py  zk_performance.py
configs/: api_verification.yaml  attack_realistic.yaml  config_development.json  config_testing.json  custom_config.yaml  example_api.yaml  example_local.yaml  governance_config.yaml  lm_large.yaml  lm_medium.yaml  lm_small.yaml  minimal_reproduce.yaml  semantic_verification.yaml  test_config.yaml  topographical.yaml  validation_examples.json  vision_cifar10.yaml  vision_imagenet.yaml  vision_imagenet_sub.yaml  vocabulary_handling.yaml  zk_config.yaml
docs/: AGENTS.md  MODEL_SELECTION_GUIDE.md  README.md  README_DEV.md  RELIABLE_TESTING.md  RUN_IN_COLAB.md  STATISTICAL_DIFFERENCE_FRAMEWORK.md  TEE_ATTESTATION_GUIDE.md  audit_system.md  blockchain_integration.md  governance_guide.md  implementation_comparison.md  lm_hashing_benchmark.md  provenance_integration.md  statistical_verification.md  topographical_api.md  validation_summary.md  zk_security_analysis.md
examples/: complete_zk_training.py  debug_merkle.py  demo_prompt_generation.py  demo_real_runner.py  demo_teacher_forced.py  example_benchmarking.py  example_config_usage.py  example_integration.py  example_model_setup_demo.py  example_sequential_decision.py  example_sequential_testing.py  example_template_challenges.py  example_vision_benchmark.py  example_vision_integration.py  fingerprinting_demo.py  fix_tailchasing_issues.py  fix_tailchasing_proper.py  governance_demo.py  optimized_zk_demo.py  poseidon_example.py  provenance_demo.py  sequential_analysis.ipynb  test_challenge_generators.py  test_crypto_integration.py  test_integration.py  test_metrics_calculator.py  test_model_setup.py  test_sequential_decision.py  test_statistical_difference.py  test_vision_benchmark.py  training_with_provenance.py  zk_demo.py  zk_training_example.py
experimental_results/: COLLATED_RESULTS_20250816_075159.md  behavioral_fingerprint_analysis.json  calibration_test_20250819_221325.json  calibration_test_results_20250819_201117.json  calibration_test_results_20250819_204641.json  calibration_test_results_20250819_214516.json  calibration_test_results_20250819_215930.json  calibration_test_results_20250819_220238.json  calibration_test_results_20250819_223757.json  calibration_test_results_20250819_235021.json  calibration_test_results_20250820_003425.json  calibration_test_results_20250820_123346.json  calibration_test_results_20250820_134850.json  calibration_test_results_20250820_135338.json  calibration_test_results_20250820_140750.json  calibration_test_results_20250820_150541.json  calibration_test_results_20250820_153340.json  (+261 more)
pot/zk/prover_halo2/: .gitignore  Cargo.toml  HALO2_UPGRADE_NOTES.md  README.md  SGD_VERIFICATION_COMPLETE.md  demo_public.json  demo_sgd_verification.py  demo_witness.json
pot/zk/prover_halo2/src/: circuit.rs  cli.rs  fixed_point.rs  lib.rs  lora_circuit.rs  lora_circuit_optimized.rs  poseidon.rs
pot/zk/prover_halo2/tests/: lora_circuit_tests.rs
(+1550 files in other folders)
