[project]
name = "pot-verifier"
version = "0.1.0"
description = "Proof-of-Training (PoT) behavioral verifier skeleton"
requires-python = ">=3.9"
dependencies = [
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
hf = ["transformers>=4.40.0", "torch>=2.1"]
dev = ["black", "ruff", "mypy"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100