[package]
name = "prover_halo2"
version = "0.1.0"
edition = "2021"
authors = ["PoT Team <pot@example.com>"]
description = "Halo2 ZK circuit for Proof-of-Training verification"
license = "MIT"

[dependencies]
halo2_proofs = "0.3"
halo2_gadgets = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
ff = "0.13"
group = "0.13"
pasta_curves = "0.5"
rand = "0.8"
hex = "0.4"
thiserror = "1.0"
clap = "4.0"
base64 = "0.22"
flate2 = "1.0"

[lib]
name = "prover_halo2"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "prove_sgd"
path = "src/bin/prove_sgd.rs"

[[bin]]
name = "verify_sgd"
path = "src/bin/verify_sgd.rs"

[[bin]]
name = "prove_sgd_stdin"
path = "src/bin/prove_sgd_stdin.rs"

[[bin]]
name = "verify_sgd_stdin"
path = "src/bin/verify_sgd_stdin.rs"

[[bin]]
name = "prove_lora_stdin"
path = "src/bin/prove_lora_stdin.rs"

[[bin]]
name = "verify_lora_stdin"
path = "src/bin/verify_lora_stdin.rs"

[features]
default = []
python-bindings = ["pyo3"]

[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]
optional = true

[dev-dependencies]
tempfile = "3.8"